# Agentic_RAG_Application

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: exceptions.py  logging.py
