[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name="agentic-rag-system"
version="0.1.0"
requires-python=">=3.13"
dependency=[]
dependencies = [
    "fastapi>=0.136.3",
    "orjson>=3.11.9",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff] 
target-version="py313"
line-length=100

[tool.ruff.lint]
select=['E','F','I','W','UP']

[tool.pytest.ini_opinions]
asyncio_mode="auto"
testpaths=['tests']

[tool.hatch.build.targets.wheel]
packages=['app']

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

